<resources>
    <string name="app_name">Speech therapy in Telugu</string>
    <string name="అ">అ</string>
    <string name="అరటి_పండు">అరటి పండు</string>
    <string name="అమ్మ">అమ్మ</string>
    <string name="అగ్గిపుల్ల">అగ్గిపుల్ల</string>
    <string name="అగ్ని">అగ్ని</string>
    <string name="అల">అల</string>
    <string name="అడుగులు">అడుగులు</string>
    <string name="అంగడి">అంగడి</string>
    <string name="అద్దం">అద్దం</string>
    <string name="అన్నం">అన్నం</string>
    <string name="ఆ">ఆ</string>
    <string name="ఆవు">ఆవు</string>
    <string name="ఆకు">ఆకు</string>
    <string name="ఆట">ఆట</string>
    <string name="ఇ">ఇ</string>
    <string name="ఇల్లు">ఇల్లు</string>
    <string name="ఇటుక">ఇటుక</string>
    <string name="ఇసుక">ఇసుక</string>
    <string name="ఇత్తడి_దీపాలు">ఇత్తడి దీపాలు</string>
    <string name="ఇనుము">ఇనుము</string>
    <string name="ఈ">ఈ</string>
    <string name="ఈక">ఈక</string>
    <string name="ఈగ">ఈగ</string>
    <string name="ఈతకాయ">ఈతకాయ</string>
    <string name="ఈత">ఈత</string>
    <string name="ఉ">ఉ</string>
    <string name="ఉడుత">ఉడుత</string>
    <string name="ఉంగరం">ఉంగరం</string>
    <string name="ఉల్లిగడ్డ">ఉల్లిగడ్డ</string>
    <string name="ఊ">ఊ</string>
    <string name="ఊయల">ఊయల</string>
    <string name="ఊరు">ఊరు</string>
    <string name="ఊతప్పం">ఊతప్పం</string>
    <string name="క">క</string>
    <string name="కమలం">కమలం</string>
    <string name="కుక్క">కుక్క</string>
    <string name="కుర్చి">కుర్చి</string>
    <string name="కారు">కారు</string>
    <string name="కప్పు">కప్పు</string>
    <string name="కుండ">కుండ</string>
    <string name="కొంగ">కొంగ</string>
    <string name="కన్ను">కన్ను</string>
    <string name="కత్తి">కత్తి</string>
    <string name="కత్తెర">కత్తెర</string>
    <string name="కాకరకాయ">కాకరకాయ</string>
    <string name="చిక్కుడు_కాయ">చిక్కుడు కాయ</string>
    <string name="చక్కెర">చక్కెర</string>
    <string name="తక్కెడ">తక్కెడ</string>
    <string name="వక్కలు">వక్కలు</string>
    <string name="వంకాయ">వంకాయ</string>
    <string name="కిటికి">కిటికి</string>
    <string name="కాటుక">కాటుక</string>
    <string name="నక్క">నక్క</string>
    <string name="చాకు">చాకు</string>
    <string name="ఎలుక">ఎలుక</string>
    <string name="పలక">పలక</string>
    <string name="కాకి">కాకి</string>
    <string name="జింక">జింక</string>
    <string name="చొక్క">చొక్క</string>
    <string name="పార్కు">పార్కు</string>
    <string name="చిలుక">చిలుక</string>
    <string name="ఖ">ఖ</string>
    <string name="ఖడ్గం">ఖడ్గం</string>
    <string name="ఖర్జూరము">ఖర్జూరము</string>
    <string name="ముఖము">ముఖము</string>
    <string name="శంఖం">శంఖం</string>
    <string name="రాఖీ">రాఖీ</string>
    <string name="గ">గ</string>
    <string name="గుర్రము">గుర్రము</string>
    <string name="గడప">గడప</string>
    <string name="గాడిద">గాడిద</string>
    <string name="గంప">గంప</string>
    <string name="గాజులు">గాజులు</string>
    <string name="గోడ">గోడ</string>
    <string name="గవ్వలు">గవ్వలు</string>
    <string name="గడియారము">గడియారము</string>
    <string name="గేటు">గేటు</string>
    <string name="గుడి">గుడి</string>
    <string name="గొలుసు">గొలుసు</string>
    <string name="బంగారం">బంగారం</string>
    <string name="రేగిపళ్లు">రేగిపళ్లు</string>
    <string name="కంగారూ">కంగారూ</string>
    <string name="పెంగ్విన్">పెంగ్విన్</string>
    <string name="నగలు">నగలు</string>
    <string name="పుట్టగొడుగు">పుట్టగొడుగు</string>
    <string name="మినుగురుపురుగు">మినుగురుపురుగు</string>
    <string name="గొడుగు">గొడుగు</string>
    <string name="పాముపడగ">పాముపడగ</string>
    <string name="ముగ్గు">ముగ్గు</string>
    <string name="ఏనుగు">ఏనుగు</string>
    <string name="బుడగ">బుడగ</string>
    <string name="పెరుగు">పెరుగు</string>
    <string name="పిడుగు">పిడుగు</string>
    <string name="ఘ">ఘ</string>
    <string name="ఘంట">ఘంట</string>
    <string name="చ">చ</string>
    <string name="చాట">చాట</string>
    <string name="చాక్లెట్">చాక్లెట్</string>
    <string name="చీపురు">చీపురు</string>
    <string name="చీర">చీర</string>
    <string name="చెట్టు">చెట్టు</string>
    <string name="చామంతి">చామంతి</string>
    <string name="చక్రము">చక్రము</string>
    <string name="చేప">చేప</string>
    <string name="చాప">చాప</string>
    <string name="చెవి">చెవి</string>
    <string name="పిచ్చుక">పిచ్చుక</string>
    <string name="పచ్చడి">పచ్చడి</string>
    <string name="టీచరు">టీచరు</string>
    <string name="నిచ్చెన">నిచ్చెన</string>
    <string name="మంచము">మంచము</string>
    <string name="చెంచా">చెంచా</string>
    <string name="చర్చ్">చర్చ్</string>
    <string name="సంచి">సంచి</string>
    <string name="మంచు">మంచు</string>
    <string name="ఛ">ఛ</string>
    <string name="ఛాతి">ఛాతి</string>
    <string name="పింఛము">పింఛము</string>
    <string name="జ">జ</string>
    <string name="జడ">జడ</string>
    <string name="జామకాయ">జామకాయ</string>
    <string name="జపమాల">జపమాల</string>
    <string name="జలము">జలము</string>
    <string name="జిలకర్ర">జిలకర్ర</string>
    <string name="జెండా">జెండా</string>
    <string name="జీపు">జీపు</string>
    <string name="జల్లెడ">జల్లెడ</string>
    <string name="జోకర్">జోకర్</string>
    <string name="జున్ను">జున్ను</string>
    <string name="జిప్">జిప్</string>
    <string name="పంజరం">పంజరం</string>
    <string name="గజ్జెలు">గజ్జెలు</string>
    <string name="కోడిపుంజు">కోడిపుంజు</string>
    <string name="రాజు">రాజు</string>
    <string name="ఝ">ఝ</string>
    <string name="ఝాన్సీ_రాణి">ఝాన్సీ రాణి</string>
    <string name="ట">ట</string>
    <string name="టీ_వి">టీ.వి</string>
    <string name="టార్చ్">టార్చ్</string>
    <string name="ట్రాక్టరు">ట్రాక్టరు</string>
    <string name="టేపు">టేపు</string>
    <string name="బాటిల్">బాటిల్</string>
    <string name="అటుకులు">అటుకులు</string>
    <string name="కిరీటం">కిరీటం</string>
    <string name="బిస్కెట్లు">బిస్కెట్లు</string>
    <string name="టమాట">టమాట</string>
    <string name="ప్లేటు">ప్లేటు</string>
    <string name="జుట్టు">జుట్టు</string>
    <string name="బెల్ట్">బెల్ట్</string>
    <string name="పొట్ట">పొట్ట</string>
    <string name="పెట్టె">పెట్టె</string>
    <string name="బూట్లు">బూట్లు</string>
    <string name="బొట్టు">బొట్టు</string>
    <string name="ఠ">ఠ</string>
    <string name="కంఠం">కంఠం</string>
    <string name="బఠాని">బఠాని</string>
    <string name="డ">డ</string>
    <string name="డబ్బులు">డబ్బులు</string>
    <string name="డప్పు">డప్పు</string>
    <string name="గోడ_ఢ">గోడ</string>
    <string name="డోలు">డోలు</string>
    <string name="డబ్బా">డబ్బా</string>
    <string name="గడ్డం">గడ్డం</string>
    <string name="రేడియో">రేడియో</string>
    <string name="కడియం">కడియం</string>
    <string name="పడవ">పడవ</string>
    <string name="గాడిద_ఢ">గాడిద</string>
    <string name="అడవి">అడవి</string>
    <string name="చంద్రుడు">చంద్రుడు</string>
    <string name="గుడ్డు">గుడ్డు</string>
    <string name="బోర్డు">బోర్డు</string>
    <string name="సోడా">సోడా</string>
    <string name="బ్లేడు">బ్లేడు</string>
    <string name="చామగడ్డ">చామగడ్డ</string>
    <string name="దండ">దండ</string>
    <string name="టెడ్డీ">టెడ్డీ</string>
    <string name="రోడ్డు">రోడ్డు</string>
    <string name="బండి">బండి</string>
    <string name="తొండ">తొండ</string>
    <string name="ఢ">ఢ</string>
    <string name="ఢమరుకం">ఢమరుకం</string>
    <string name="త">త</string>
    <string name="తలుపు">తలుపు</string>
    <string name="తాడు">తాడు</string>
    <string name="తొమ్మిది">తొమ్మిది</string>
    <string name="తోక">తోక</string>
    <string name="తల">తల</string>
    <string name="తేనె">తేనె</string>
    <string name="తాబేలు">తాబేలు</string>
    <string name="తొట్టి">తొట్టి</string>
    <string name="తాత">తాత</string>
    <string name="తూనీగ">తూనీగ</string>
    <string name="వంతెన">వంతెన</string>
    <string name="పుస్తకము">పుస్తకము</string>
    <string name="విత్తనం">విత్తనం</string>
    <string name="చింతకాయ">చింతకాయ</string>
    <string name="మూత">మూత</string>
    <string name="కోతి">కోతి</string>
    <string name="చిరుత">చిరుత</string>
    <string name="చెత్త">చెత్త</string>
    <string name="ద">ద</string>
    <string name="దంతం">దంతం</string>
    <string name="దిండు">దిండు</string>
    <string name="దువ్వెన">దువ్వెన</string>
    <string name="దారం">దారం</string>
    <string name="దీపము">దీపము</string>
    <string name="దీపావళి">దీపావళి</string>
    <string name="దోమ">దోమ</string>
    <string name="దానిమ్మపండు">దానిమ్మపండు</string>
    <string name="మందారం">మందారం</string>
    <string name="కుందేలు">కుందేలు</string>
    <string name="కందిపప్పు">కందిపప్పు</string>
    <string name="కందగడ్డ">కందగడ్డ</string>
    <string name="కందీరీగ">కందీరీగ</string>
    <string name="పందిరి">పందిరి</string>
    <string name="పుదీన">పుదీన</string>
    <string name="నది">నది</string>
    <string name="పంది">పంది</string>
    <string name="వంద">వంద</string>
    <string name="ధ">ధ</string>
    <string name="ధనస్సు">ధనస్సు</string>
    <string name="ధనలక్ష్మీ">ధనలక్ష్మీ</string>
    <string name="న">న</string>
    <string name="నాలుక">నాలుక</string>
    <string name="నాన్న">నాన్న</string>
    <string name="నీరు">నీరు</string>
    <string name="నిమ్మకాయ">నిమ్మకాయ</string>
    <string name="నోరు">నోరు</string>
    <string name="నెమలి">నెమలి</string>
    <string name="నాటకం">నాటకం</string>
    <string name="నత్త">నత్త</string>
    <string name="నడుము">నడుము</string>
    <string name="తేనె_పట్టు">తేనె పట్టు</string>
    <string name="వెన్నముద్ద">వెన్నముద్ద</string>
    <string name="పన్నీరు">పన్నీరు</string>
    <string name="పానకం">పానకం</string>
    <string name="పన్ను">పన్ను</string>
    <string name="నూనె">నూనె</string>
    <string name="ఫోను">ఫోను</string>
    <string name="ఫ్యాను">ఫ్యాను</string>
    <string name="పెన్ను">పెన్ను</string>
    <string name="ప">ప</string>
    <string name="పాము">పాము</string>
    <string name="పళ్ళు">పళ్ళు</string>
    <string name="పెనం">పెనం</string>
    <string name="పులిహోర">పులిహోర</string>
    <string name="పెన్సిలు">పెన్సిలు</string>
    <string name="పులి">పులి</string>
    <string name="ప్యాంటు">ప్యాంటు</string>
    <string name="పేపరు">పేపరు</string>
    <string name="పోలీసు">పోలీసు</string>
    <string name="మిరపకాయ">మిరపకాయ</string>
    <string name="రంపము">రంపము</string>
    <string name="గాలిపటం">గాలిపటం</string>
    <string name="తుపాకి">తుపాకి</string>
    <string name="పాప">తుపాకి</string>
    <string name="పరుపు">తుపాకి</string>
    <string name="నలుపు">తుపాకి</string>
    <string name="బంగాళదుంప">తుపాకి</string>
    <string name="ఫ">ఫ</string>
    <string name="ఫలములు">ఫలములు</string>
    <string name="ఫిరంగి">ఫిరంగి</string>
    <string name="ఫ్లూటు">ఫ్లూటు</string>
    <string name="ఫ్రిడ్జ్">ఫ్రిడ్జ్</string>
    <string name="సోఫా">సోఫా</string>
    <string name="సెల్ఫీ">సెల్ఫీ</string>
    <string name="జిరాఫి">జిరాఫి</string>
    <string name="బ">బ</string>
    <string name="బల్ల">బల్ల</string>
    <string name="బ్రష్">బ్రష్</string>
    <string name="బస్సు">బస్సు</string>
    <string name="బాణం">బాణం</string>
    <string name="బంతి">బంతి</string>
    <string name="బల్లి">బల్లి</string>
    <string name="బక్కెట్">బక్కెట్</string>
    <string name="బలపం">బలపం</string>
    <string name="బీట్_రూట్">బీట్ రూట్</string>
    <string name="బెల్లం">బెల్లం</string>
    <string name="తబల">తబల</string>
    <string name="కొబ్బరి">కొబ్బరి</string>
    <string name="రబ్బరు">రబ్బరు</string>
    <string name="సబ్బు">సబ్బు</string>
    <string name="బాబు">బాబు</string>
    <string name="చెంబు">చెంబు</string>
    <string name="భ">భ</string>
    <string name="భరిణ">భరిణ</string>
    <string name="భరతమాత">భరతమాత</string>
    <string name="భారతదేశం">భారతదేశం</string>
    <string name="భోజనం">భోజనం</string>
    <string name="medial">Medial</string>
    <string name="initial">Initial</string>
    <string name="load_cards">Load Cards</string>
    <string name="final_string">Final</string>
    <string name="flash_cards">Flash Cards</string>
    <string name="choose_articualtion">Choose Articualtion</string>
</resources>